version 0.1.5
- exported a few functions w/ keywords internal for extensibility

version 0.1.4
- 'confront' now emits a warining when variable name conflicts can occur.
- Deprecated 'validate_reset', in favour of the shorter 'reset' (use 'validate::reset' in case of ambiguity)
- Deprecated 'validate_options' in favour of the shorter 'voptions'
- New option na.value with default value NA, controlling the output when a rule evaluates to NA.
- Bugfix: macro expansion failed when macros were reused in other macros.
- Bugfix: certain nonlinear relations were recognized as linear

version 0.1.3
- initial release