@@ -294,7 +294,7 @@ extract_names <- function(L,prefix="V"){
   V <- variables(x,as="matrix")
   # all connections 
   A <- V %*% t(V) > 0
-  L <- apply(A,2,which)
+  L <- lapply(1:nrow(A),function(i) which(A[i,]))
   
   blocks <- new.env()
   b <- 0
